--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,13 @@
     <div class="flash-field">
     </div>
 
+    <%= render 'share/flash_messages.html' %>
+
     <%= render 'share/header' %>
 
     <%= yield %>
+
+    <%= render 'share/footer' %>
 
   </body>
 </html>
