--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,20 @@
     @import 'font-awesome-sprockets';
     @import 'font-awesome';
 
+
+body{
+  background-color: #444444;
+  color:white;
+}
+
+a{
+  color:white;
+}
+
+a:hover{
+  color:red;
+  text-decoration: none;
+}
 .flash-field {
 	padding-bottom: 61px;
 	background-color: black;
@@ -29,9 +43,6 @@
 dl.searchbox{
   width: 350px;
   position:relative;
-  background-color:#f3f3f3;
-  border:1px solid 	#FFFFF0;
-  border-radius:6px;
   top:10px;
   left:230px;
 }
@@ -52,14 +63,13 @@ dl.searchbox dd{
   width:30%;
 }
 .search-btn{
-  display:block;
   background:#CC0000;
-  width:100%;
-  height:100%;
-  line-height:37px;
+  width:95%;
+  height:90%;
+  line-height:32px;
   border:none;
-  border-radius: 0 6px 6px 0;
   color:#FFF;
+  margin-top:2px;
 }
 .search-btn:hover {
   background:#b22222;
@@ -86,10 +96,6 @@ dl.searchbox dd{
   font-size: .9rem;
   letter-spacing: .3rem;
   background: rgba(0, 0, 0, 0.6)!important;
-}
-
-.pucture_field{
-	margin-bottom:15px;
 }
 
 .name_space{
@@ -158,3 +164,62 @@ dl.searchbox dd{
 .link_field{
   color:#fff;
 }
+
+label_list {
+  margin-right: 10px;
+  width:100px;
+  float: left;
+}
+
+.search-text{
+  margin-top:50px;
+  padding-top:40px;
+  padding-bottom:40px;
+}
+
+.copyright{
+    background-color:#222222;
+}
+
+.copyright p{
+   margin:15px 0px;
+}
+
+footer{
+  background-color:#222222;
+  padding: 30px 0px;
+}
+
+footer .menu li {
+  color:#b1aca1;
+  padding:10px;
+  text-decoration:none;
+}
+
+footer .menu li a:hover{
+  color:#7dabdb;
+}
+
+.form{
+  margin-left:180px;
+  color:black;
+}
+
+.about-image{
+  width: 100%;
+  height: 710px;
+}
+
+.about_field{
+  position: relative;
+}
+
+.about_field p {
+  position: absolute;
+  color: white;
+  top: 0;
+  left: 0;
+  font-weight: bold;
+  font-size: 2em;
+  font-family :Quicksand, sans-serif;
+  }
