--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -1,5 +1,15 @@
 .profile_edit{
-	margin-top:20px;
+  margin-top:20px;
+}
+
+.name_field{
+  border:none;
+  border-bottom:solid 2px;
+  background:none;
+  outline: 0;
+  font-size:15px;
+  margin-left:20px;
+  margin-top:-15px;
 }
 
 .profile_field{
@@ -7,21 +17,20 @@
 }
 
 ul li {
-    list-style: none;
-}
-
-label {
-    margin-right: 10px;
-    width:100px;
-    float: left;
+  list-style: none;
 }
 
 ul {
-    width: 500px;
+  width: 500px;
+}
+
+.profile_image{
+  margin-left:50px;
+  margin-bottom:20px;
 }
 
 .profile_submit{
-  margin-left:90px;
+  margin-left:150px;
 }
 
 .community_user{
@@ -32,9 +41,6 @@ ul {
 .infinite_box{
 	margin-bottom:10px;
 	margin-left:20px;
-}
-
-.Submitted_title{
 }
 
 .song_infinte{
@@ -56,6 +62,22 @@ ul {
 }
 
 .collection-item{
-  margin-top:20px;
+  margin-top:100px;
   margin-left:300px;
+}
+
+.follow_field{
+  margin-top:30px;
+  margin-bottom:-100px;
+}
+
+.following_index{
+  display:inline-block;
+  font-size:20px;
+}
+
+.followed_index{
+  margin-left:100px;
+  display:inline-block;
+  font-size:20px;
 }
