--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,10 +1,10 @@
 <%= form_with(model: [song, comment] ) do |form| %>
   <div class = "comment_form">
    <div id = "comment-field">
-     <%= form.text_area :content, size: "25x1" %>
+     <%= form.text_area :content, :class => "form_text" %>
    </div>
    <div class="actions">
-     <%= form.submit "送信" %>
+     <%= form.submit "送信",class: 'btn btn-primary my-1 mb-5 px-5' %>
    </div>
   </div>
 <% end %>
