--- a/app/views/comments/_index.html.erb
+++ b/app/views/comments/_index.html.erb
@@ -1,11 +1,13 @@
 <% comments.each do |comment| %>
-	<% unless comment.id.nil? %>
-		<div class = "comment-box">
-			<%= link_to user_path(comment.user.id) do %>
-				<%= image_tag attachment_url(comment.user, :profile_image,		 :fill, 50, 45, format: "jpg") %>
-			<% end %>
-			<p class = "comment-content"><%= comment.content %></p></br>
-		</div>
-	<% end %>
+  <% unless comment.id.nil? %>
+    <div class = "comment-box">
+      <%= link_to user_path(comment.user.id) do %>
+        <div class = "comment_image">
+          <%= attachment_image_tag comment.user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg",size: '50x50' %>
+        </div>
+        <div class = "comment_user"><%= comment.user.name %></div>
+      <% end %>
+      <div class = "comment_content"><%= comment.content %></div></br>
+	</div>
+  <% end %>
 <% end %>
-
