--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,7 +27,7 @@
       <%= f.password_field :password_confirmation, class: 'form-field', autocomplete: "  new-password" %>
     </div>
 
-    <div class="actions">
+    <div class="login_submit">
       <%= f.submit "Sign up", :class=>"login_btn" %>
     </div>
   <% end %>
