--- a/app/views/share/_footer.html.erb
+++ b/app/views/share/_footer.html.erb
@@ -1,39 +1,41 @@
-<footer>
-<div class="Footer-Upper container">
-	<h1 class="Footer-Messeage row">Enjoy Your Music.</h1>
-	<div class="row Footer-title"><p class="col-md-8">Genre</p><p class="col-md-3">Author</p></div>
-	<div class="Footer-Upper-contents row">
-		<div class="Footer-Genre col-md-4">
-			<div class="Genre-list">Minimalism</div><div class="Genre-list">Experimental</div><div class="Genre-list">Neoclassicism</div>
-			<div class="Genre-list">Expressionism</div>
-		</div>
-		<div class="Footer-Genre col-md-4">
-			<div class="Genre-list">Romantic</div><div class="Genre-list">Impressionism</div>
-			<div class="Genre-list">Medieval era</div><div class="Genre-list">Galant music</div><div class="Genre-list">Renaissance</div>
-		</div>
-		<div class="Footer-Author col-md-3">
-			<div class="Author-list">Pope Gregory I</div><div class="Author-list">Hildegard von Bingen</div><div class="Author-list">Adam de la Halle</div>
-			<div class="Author-list">Guiraut de Bornelh</div><div class="Author-list">Raimbaut de </div><div class="Author-list">VacqueirasJehan Bodel</div><div class="Author-list">Peire Cardenal</div>
-		</div>
-	</div>
+<div class="search-text">
+  <div class="container">
+    <div class="row">
+      <div class="form">
+        <%= render 'share/seach_form' %>
+      </div>
+    </div>
+   </div>
 </div>
-<div class="Lower-Footer">
-	<div class="CopyrigtContainer"><p>©2019 ThirimenSarbar</p></div>
-	<div class="Footer-SocialContainer">
-		<div class="Footer-Social">
-			<ul>
-				<li class="fab fa-twitter-square"></li>
-				<li class="fab fa-instagram"></li>
-				<li class="fab fa-facebook-square"></li>
-			</ul>
-		</div>
-	</div>
-	<div class="Footer-Owner-container">
-		<p class="fab fa-jenkins"></p>
-		<p class="Footer-Owner">田中です</p>
-	</div>
 
-</div>
+<footer>
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-md-6 col-sm-6 col-xs-12">
+      </div>
+
+      <div class="col-md-6 col-sm-6 col-xs-12">
+        <ul class="menu list-inline">
+          <% if user_signed_in? %>
+            <li><%= link_to 'Home', root_path %></li>
+            <li><%= link_to 'Mypage', user_path(current_user.id) %></li>
+            <li><%= link_to 'Post', new_song_path %></li>
+            <li><%= link_to 'Community', communities_path  %></li>
+            <li><%= link_to 'About', home_about_path %></li>
+          <% else %>
+            <li><%= link_to 'Home', root_path %></li>
+            <li><%= link_to 'About', home_about_path %></li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+  </div>
 </footer>
 
-
+<div class="copyright">
+ <div class="container">
+     <div class="row text-center">
+     	<p>Copyright © 2019 All rights reserved</p>
+     </div>
+    </div>
+</div>
