--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -14,11 +14,12 @@
 
             <div class="collapse navbar-collapse list1" id="bs-example-navbar-collapse-2">
               <ul class="nav navbar-nav">
-                <li><%= link_to '楽曲一覧', root_path %></li>
-                <li><%= link_to 'マイページ', user_path(current_user.id) %></li>
-                <li><%= link_to 'ログアウト',destroy_user_session_path, method: :delete  %></li>
-                <li><%= link_to '投稿', new_song_path %></li>
-                <li><%= link_to 'コミュニティ一覧', communities_path  %></li>
+                <li><%= link_to 'Home', root_path %></li>
+                <li><%= link_to 'Mypage', user_path(current_user.id) %></li>
+                <li><%= link_to 'Post', new_song_path %></li>
+                <li><%= link_to 'Community', communities_path %></li>
+                <li><%= link_to 'About', home_about_path %></li>
+                <li><%= link_to 'Logout',destroy_user_session_path, method: :delete  %></li>
               </ul>
             </div>
             <div class="list2"><%= render 'share/seach_form' %></div>
@@ -43,6 +44,7 @@
                 <li><%= link_to '楽曲一覧',root_path%> <span class="sr-only">(current)</span></a></li>
                 <li><%= link_to 'ログイン',new_user_session_path%></li>
                 <li><%= link_to '新規登録',new_user_registration_path%></li>
+                <li><%= link_to 'About', home_about_path %></li>
               </ul>
             </div>
             <div class="list2"><%= render 'share/seach_form' %></div>
