--- a/app/views/share/_seach_form.html.erb
+++ b/app/views/share/_seach_form.html.erb
@@ -1,6 +1,6 @@
 <dl class="searchbox">
     <%= search_form_for @q, url: search_path do |f| %>
-      <dt><%= f.text_field :name_or_artist_cont, placeholder: '検索するテキストを入力...' %></dt>
-      <dd><%= f.submit "検索" , class: 'search-btn'%></dd>
+      <dt><%= f.text_field :name_or_artist_cont, placeholder: 'Search' %></dt>
+      <dd><%= f.submit "Search" , class: 'search-btn'%></dd>
     <% end %>
 </dl>
