--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,37 +1,49 @@
 <div class = "container">
-	<h1>楽曲投稿</h1>
-	<%= form_tag(new_song_path, method: :get) do %>
-		<div class = "locate_song">
-			<%= text_field_tag :search %>
-			<%= submit_tag '検索', name: nil %>
-		</div>
-	<% end %>
-	<%= form_for(@song, url: songs_path, html:{method: "post" }) do |f| %>
-		<% if @data != nil %>
-			<% @data.items.each do |item| %>
-			 	<div class = "song-name">
-					<strong><%= item.snippet.title %></strong>
-					<%= f.hidden_field :name, :value => item.snippet.title %>
-				</div>
-				<iframe width="700" height="410" src="https://www.youtube.com/	embed/<%= item.id.video_id %>" frameborder="0" allow="	accelerometer; autoplay; encrypted-media; gyroscope; 	picture-in-picture" allowfullscreen></iframe>
-				<%= f.hidden_field :vid, :value => item.id.video_id %>
-				<%= f.hidden_field :image, :value => item.snippet.thumbnails.medium.url %>
-			<% end %>
-			<div class = "input-field">
-				<ul>
-					<li class = "profile_field">
-						<%= f.label :artist %>
-						<%= f.text_field :artist %>
-					</li>
-					<li class = "profile_field">
-						<%= f.label :description %>
-						<%= f.text_area :description %>
-					</li>
-					<li class = "profile_submit">
-						<%= f.submit "確定", class: 'btn btn-danger 	btn-md center-block' %>
-					</li>
-				</ul>
-			</div>
-		<% end %>
-	<% end %>
+  <h1>楽曲投稿</h1>
+  <%= form_tag(new_song_path, method: :get) do %>
+    <div class = "locate_song">
+      <%= text_field_tag :search %>
+      <%= submit_tag '検索', name: nil, :class => 'btn btn-primary'  %>
+    </div>
+  <% end %>
+  <%= form_for(@song, url: songs_path, html:{method: "post" }) do |f| %>
+    <%= render 'share/error_messages', object: f.object %>
+    <% if @data != nil %>
+      <% @data.items.each do |item| %>
+        <div class = "song-name">
+          <strong><%= item.snippet.title %></strong>
+          <%= f.hidden_field :name, :value => item.snippet.title %>
+        </div>
+        <iframe width="700" height="410" src="  https://www.youtube.com/	embed/<%= item.id.video_id %>"   frameborder="0" allow="	accelerometer; autoplay;   encrypted-media; gyroscope; picture-in-picture"   allowfullscreen></iframe>
+        <%= f.hidden_field :vid, :value => item.id.video_id %>
+        <%= f.hidden_field :image, :value => item.snippet.  thumbnails.medium.url %>
+      <% end %>
+      <p>歌詞は<%= link_to 'こちら', @lylics.url, target: :_blank %>へ</p>
+      <div class = "input-field">
+        <ul>
+          <li class = "profile_field">
+            <%= f.label :artist, {class: 'label_list'} %>
+            <%= @lylics.primary_artist.name %>
+            <%= f.hidden_field :artist, :value => @lylics.    primary_artist.name %>
+          </li>
+          <li class = "profile_field">
+            <%= f.label :description, {class: 'label_list'} %>
+            <%= f.text_area :description %>
+          </li>
+          <li>
+            <%= f.hidden_field :lylics_url, :value => @lylics.url %>
+          </li>
+          <li>
+            <%= f.hidden_field :track_url, :value => @track %>
+          </li>
+          <li>
+            <%= f.hidden_field :artist_url, :value => @artist %>
+          </li>
+          <li class = "profile_submit">
+            <%= f.submit "確定", class: 'btn btn-primary' %>
+          </li>
+        </ul>
+      </div>
+    <% end %>
+  <% end %>
 </div>
