--- a/app/views/users/followed.html.erb
+++ b/app/views/users/followed.html.erb
@@ -1,7 +1,7 @@
 <div class = "container">
 	<h1>フォロワー一覧</h1>
 	<% @follows.each do |followed| %>
-		<%= image_tag attachment_url(followed, :profile_image, :fill,90, 80, format: "jpg") %>
+		<%= attachment_image_tag following, :profile_image, :fill, 60, 60, fallback: "no_image.jpg",size: '60x60' %>
 		<strong><%= link_to followed.name, user_path(followed.id) %></strong>
 		<%= followed.introduction %>
 	<% end %>
