--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,5 +1,17 @@
 <div class = "about_field">
   <%# app/assets/images %>
   <%= image_tag 'equalizer.jpg',class: 'about-image' %>
-  <p>When we stand united our hearts beat in time.</p>
+  <p>We drift deeper into the sound.</p>
+</div>
+
+<div class = "container">
+  <div class = "about_description">
+  	<h2>DMKについて</h3>
+    <p>DMKはダンスミュージックの共有サイトです。</p>
+    <p>昨今、ダンスミュージックはCMやお店で聞く機会も増えてきて、興味を湧いた方も多いのではないかと思います。</p>
+    <p>ダンスミュージックを最近興味持ち始めた方やもっと知りたいという方にも幅広く使っていただきたいと思い当サイトを製作しました。</p>
+    <p>このページではYoutubeで音楽再生をできるようになっております。</p>
+    <p>気に入った曲があれば、Apple musicで購入することもできます。</p>
+    <p>また、コミュニティも作成することができ、同じ趣味の人たちと交流することもできます。</p>
+  </div>
 </div>
