--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -214,12 +214,35 @@ footer .menu li a:hover{
   position: relative;
 }
 
-.about_field p {
+.about_field p{
   position: absolute;
   color: white;
-  top: 0;
-  left: 0;
+  top: 20%;
+  left: 30%;
+  -ms-transform: translate(-50%,-50%);
+  -webkit-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%);
+  margin:0;
+  padding:0;
   font-weight: bold;
-  font-size: 2em;
+  font-size: 2.7em;
   font-family :Quicksand, sans-serif;
-  }
+}
+
+.about_description{
+  margin-top:50px;
+  padding: 0.5em 1em;
+  margin: 2em 0;
+  color: #5d627b;
+  background: white;
+  border-top: solid 5px #5d627b;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.22);
+}
+
+.about_description h2{
+  border-bottom:solid 2px;
+}
+
+.about_description p{
+  font-size:18px;
+}
