--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: [song, comment] ) do |form| %>
   <div class = "comment_form">
    <div id = "comment-field">
-     <%= form.text_area :content, :class => "form_text" %>
+     <%= form.text_area :content, size: "100x3", :class => "form_text" %>
    </div>
    <div class="actions">
      <%= form.submit "送信",class: 'btn btn-primary my-1 mb-5 px-5' %>
