--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -2,8 +2,17 @@
   <h1>楽曲投稿</h1>
   <%= form_tag(new_song_path, method: :get) do %>
     <div class = "locate_song">
-      <%= text_field_tag :search %>
-      <%= submit_tag '検索', name: nil, :class => 'btn btn-primary'  %>
+      <ul>
+        <li class = "profile_field">
+          <label> track </label>
+          <%= text_field_tag :track,'', size: '30x1' %>
+        </li>
+        <li class = "profile_field">
+          <label> artist </label>
+          <%= text_field_tag :artist,'', size: '30x1' %>
+          <%= submit_tag '検索', name: nil, :class => 'btn btn-primary'  %>
+        </li>
+
     </div>
   <% end %>
   <%= form_for(@song, url: songs_path, html:{method: "post" }) do |f| %>
