--- a/app/assets/stylesheets/communities.scss
+++ b/app/assets/stylesheets/communities.scss
@@ -63,18 +63,14 @@ ul {
 }
 .member_field{
     margin-top:40px;
+    margin-left:20px;
+    box-shadow: 0px 0px 8px gray;
+    width:750px;
 }
 .member_name{
   display:inline-block;
   margin-left:10px;
   margin-top:20px;
-}
-
-.community_comments{
-  max-height:300px;
-  max-width:600px;
-  overflow:scroll;
-  margin-top:10px;
 }
 
 .com_comment_form{
@@ -83,6 +79,9 @@ ul {
 
 .community_song{
   margin-top:60px;
+  margin-left:20px;
+  box-shadow: 0px 0px 8px gray;
+  width:750px;
 }
 
 .post_field{
@@ -102,6 +101,7 @@ ul {
 
 .post_index{
   margin-bottom:15px;
+  margin-left:20px;
 }
 
 .community_image{
