--- a/app/assets/stylesheets/community_comments.scss
+++ b/app/assets/stylesheets/community_comments.scss
@@ -3,8 +3,69 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .com_comment_form{
-	margin-left:20px;
+  margin-left:60px;
+}
+
+.comment_form{
+  display:inline-block;
+  position: absolute;
+  margin-left:30px;
+  margin-top:-50px;
+}
+
+.actions{
+	margin-left:350px;
 }
 
 .community_comments{
+  height:350px;
+  width:750px;
+  max-width:900px;
+  margin-top:40px;
+  margin-left:30px;
+  box-shadow: 0px 0px 8px gray;
+}
+
+.comment_title{
+	margin-left:20px;
+}
+
+
+.comments_area{
+	width:400px;
+}
+
+.comment-text{
+	display:inline-block;
+}
+.comment_user{
+  margin-top:-70px;
+    margin-left:80px;
+
+}
+.comment_content{
+    margin-top:10px;
+    margin-left:80px;
+}
+
+.comment-box{
+}
+
+textarea{
+  border:none;
+  border-bottom:solid 2px;
+  background:none;
+  outline: 0;
+  width: 400px;
+  max-height: 200px;
+  resize: none;
+}
+
+.comment-box{
+	margin-left:20px;
+}
+
+.comment_image{
+  margin-top:10px;
+  margin-left:-50px;
 }
