--- a/app/views/share/_flash_messages.html.erb
+++ b/app/views/share/_flash_messages.html.erb
@@ -1,6 +1,7 @@
 <% flash.each do |message_type, message| %>
   <div class="alert alert-<%= message_type %>">
-    <%= alert %><button type="button" class="close" data-dismiss="alert">&times;</button>
+    <%= alert %>
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
     <%= message %>
   </div>
 <% end %>
