--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -246,3 +246,11 @@ footer .menu li a:hover{
 .about_description p{
   font-size:18px;
 }
+
+.submit_field{
+  margin-left:150px;
+}
+
+.profile_field{
+  margin-bottom:30px;
+}
