--- a/app/assets/stylesheets/songs.scss
+++ b/app/assets/stylesheets/songs.scss
@@ -180,3 +180,15 @@ margin-bottom:-10px;
   margin-right:-100px;
   display:inline-block;
 }
+
+.song_button{
+  margin-top:-30px;
+  float:right;
+  .btn-danger{
+    margin-left:20px;
+  }
+}
+
+.exit_description{
+  margin:20px;
+}
