--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -43,7 +43,7 @@
   <div class = "infinite_song">
 	  <% @songs.each do |song| %>
       <div class="row song_index">
-        <%= link_to song_path(song.id) do %>
+        <%= link_to song_path(song.id), data: {"turbolinks" => false} do %>
          	<div class="col-md-3 pucture_field">
          		<%= image_tag song.image, size: '200x120' %>
          	</div>
