--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -67,11 +67,11 @@
           <ul>
             <li class = text_field>
               <%= f.label :email, {class: 'label_list'} %>
-              <%= f.text_field :name, :class => "name_field" %>
+              <%= f.text_field :name, :class => "name_field", :size=>"20" %>
             </li>
             <li class = "text_field">
               <%= f.label :name, {class: 'label_list'} %>
-              <%= f.text_field :name, :class => "name_field" %>
+              <%= f.text_field :name, :class => "name_field",:size=>"20" %>
             </li>
             <li class = "text_field">
               <%= f.label :introduction, {class: 'label_list'} %>
