--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,11 +35,6 @@ a:hover{
   text-decoration: none;
 }
 
-.flash-field {
-	padding-bottom: 61px;
-	background-color: black;
-	height: 1px;
-}
 
 dl.searchbox{
   width: 350px;
@@ -119,6 +114,7 @@ dl.searchbox dd{
 .login_form{
   margin:65px auto;
   background:#2a3644;
+  max-height:720px;
   width:347px;
   text-align:center;
   padding:30px;
@@ -264,3 +260,13 @@ footer .menu li a:hover{
 .text_field{
   margin-bottom:30px;
 }
+
+.sign_image{
+  height:900px;
+  margin-top:-5px;
+  background-image: url(speakers.jpg);
+  background-size: 100% auto;
+  padding-top:50px;
+}
+
+
