--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -269,4 +269,8 @@ footer .menu li a:hover{
   padding-top:50px;
 }
 
-
+.flash-field {
+  padding-bottom: 61px;
+  background-color: black;
+  height: 1px;
+}
