--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -40,9 +40,9 @@
 
             <div class="collapse navbar-collapse list1" id="bs-example-navbar-collapse-2">
               <ul class="nav navbar-nav">
-                <li><%= link_to '楽曲一覧',root_path%> <span class="sr-only">(current)</span></a></li>
-                <li><%= link_to 'ログイン',new_user_session_path%></li>
-                <li><%= link_to '新規登録',new_user_registration_path%></li>
+                <li><%= link_to 'Home',root_path%> <span class="sr-only">(current)</span></a></li>
+                <li><%= link_to 'Login',new_user_session_path%></li>
+                <li><%= link_to 'Signup',new_user_registration_path%></li>
                 <li><%= link_to 'About', home_about_path %></li>
               </ul>
             </div>
